--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@
   color: #0d1321;
 }
 .text-secondary {
-  color: #474747;
+  color: rgba(13, 19, 33, 0.7);
   font-size: 24px;
   font-weight: bold;
 }
@@ -30,10 +30,10 @@
 }
 .btn-secondary {
   background-color: transparent;
-  font-weight: 500;
-  color: #0d1321;
-  padding: 18px 30px;
-  border: 1px solid #0d1321;
+  font-weight: 600;
+  color: rgba(13, 19, 33, 0.7);
+  padding: 12px 35px;
+  border: 1px solid rgba(13, 19, 33, 0.7);
   font-size: 20px;
 }
 
@@ -45,7 +45,7 @@
 .section-description {
   font-size: 16px;
   color: #0d1321;
-  margin: 30px 0;
+  margin: 25px 0;
 }
 /* header style   */
 .header {
@@ -60,4 +60,46 @@
 .banner-content {
   width: 975px;
   /* border: 1px solid red; */
+}
+
+.causes {
+  background-color: rgba(13, 19, 33, 0.02);
+  text-align: center;
+  width: 1140px;
+  margin: 60px auto;
+  padding: 60px;
+  border-radius: 20px;
+}
+
+.cause {
+  display: flex;
+  justify-content: space-around;
+  text-align: left;
+  padding: 40px 0;
+  background: linear-gradient(
+    80deg,
+    rgb(255, 255, 255) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  border-radius: 15px;
+  box-shadow: 0 2px 50px 0 rgba(182, 182, 182, 0.06);
+  margin: 60px 0;
+}
+.cause-2 {
+  display: flex;
+  justify-content: space-around;
+  text-align: left;
+  padding: 40px 0;
+  background: linear-gradient(
+    80deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgb(255, 255, 255) 100%
+  );
+  border-radius: 15px;
+  box-shadow: 0 2px 50px 0 rgba(182, 182, 182, 0.06);
+  margin: 60px 0;
+}
+
+.content {
+  width: 500px;
 }
