--- a/styles/style.css
+++ b/styles/style.css
@@ -103,3 +103,13 @@
 .content {
   width: 500px;
 }
+.inspiration {
+  text-align: center;
+  max-width: 1140px;
+  margin: 100px auto;
+}
+.video {
+  border-radius: 15px;
+  overflow: hidden;
+  margin: 50px 0;
+}
