target section added

--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,7 @@
   /* border: 1px solid red; */
 }
 
+/* --------main section --------- */
 .causes {
   background-color: rgba(13, 19, 33, 0.02);
   text-align: center;
@@ -103,6 +104,7 @@
 .content {
   width: 500px;
 }
+
 .inspiration {
   text-align: center;
   max-width: 1140px;
@@ -110,6 +112,28 @@
 }
 .video {
   border-radius: 15px;
-  overflow: hidden;
+
   margin: 50px 0;
+  border: 1.5px solid rgb(163, 159, 159);
+  padding: 30px;
+}
+.target {
+  text-align: center;
+  max-width: 1140px;
+  margin: auto;
+}
+.target-container {
+  display: flex;
+  gap: 20px;
+  margin: 60px 0;
+}
+.target-content {
+  background-color: rgba(255, 76, 30, 0.05);
+  padding: 30px;
+  border-radius: 15px;
+  text-align: left;
+}
+.target a {
+  color: #0d1321;
+  font-weight: bold;
 }
